Fix heading spacing

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -29,7 +29,6 @@ h6 {
   font-family: $heading-font-family;
   font-size: $base-font-size;
 //  line-height: $heading-line-height;
-  line-height: 1em;
   padding: 0.718em 0 0.309em 0;
 }
 
